reformat file